--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ keywords = ["trading", "backtesting", "optimization", "mcp"]
 
 dependencies = [
     "mcp>=1.0.0",
+    "fastmcp>=0.3.0",
     "jedi>=0.19.0",
     "numpy>=1.24.0",
     "pandas>=2.0.0",
