--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,9 @@ dev = [
 optuna = [
     "optuna>=3.0.0",
 ]
+redis = [
+    "redis>=4.0.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/bkuri/jesse-mcp"
